<resources>
    <string name="app_name">Roadbull for Driver</string>

    <!-- Strings related to login -->
    <string name="prompt_username">Username</string>
    <string name="prompt_email">Email</string>
    <string name="prompt_password">Password</string>
    <string name="prompt_reconfirm_password">Reconfirm Password</string>
    <string name="prompt_mobileNumber">Mobile Number</string>
    <string name="prompt_first_name_surname">First Name + Surname</string>
    <string name="prompt_address">Address</string>
    <string name="prompt_ic_number">IC Number</string>
    <string name="prompt_driving_license">Driving License</string>
    <string name="prompt_vehicle_number">Vehicle Number</string>
    <string name="prompt_reason">Reason</string>
    <string name="prompt_agreement">By signing up, I agree to Company terms and conditions and privacy policy.</string>
    <string name="prompt_remember_credential">Remember account on this phone</string>
    <string name="forgot_password_help_text">Enter your username to reset password. A guidance will be sent into your email address.</string>
    <string name="action_staff_sign_in">LOGIN</string>
    <string name="action_member_sign_in">MEMBER LOGIN</string>
    <string name="action_register_driver">New Driver Registration</string>
    <string name="action_forgot_password">Forgot Password</string>
    <string name="action_sign_up_now">Sign up now</string>
    <string name="action_update">Update</string>
    <string name="action_change">Change</string>
    <string name="action_arrived_on_time">Arrived on time</string>
    <string name="action_failed_delivery">Failed delivery</string>
    <string name="action_failed_pickup">Failed pickup</string>
    <string name="action_scan_qr">Scan QR</string>
    <string name="action_submit">Submit</string>
    <string name="action_arrived">Arrived</string>
    <string name="action_navigate">Navigate</string>
    <string name="title_activity_login">Login</string>
    <string name="title_activity_register">Register</string>
    <string name="title_activity_forgot_password">Forgot Password</string>
    <string name="title_activity_maps">Maps</string>
    <string name="title_activity_profile">Profile</string>
    <string name="title_activity_history">History</string>
    <string name="title_activity_news">News</string>
    <string name="title_activity_contact_info">Contact Info</string>
    <string name="title_activity_staff">Staff Jobs</string>
    <string name="title_activity_member">Member Jobs</string>
    <string name="title_activity_arrive">Arrive</string>
    <string name="title_activity_scan_qr">Scan QR</string>
    <string name="title_activity_notifications">Notifications</string>
    <string name="title_activity_special_job">Special Jobs</string>
    <string name="title_activity_job">Jobs</string>

    <string name="error_network_problem">Network connection has problem. Please check your Internet connection and try again after few minutes</string>
    <string name="error_username_required">User Name is required</string>
    <string name="error_invalid_password">Password is required</string>
    <string name="error_invalid_permissions">Your account does not have valid permissions to use this application. Please contact to our client supports for help.</string>
    <string name="error_incorrect_password">User Name or Password is incorrect</string>
    <string name="error_unknown_error">Errors occur while processing your request. Please try again after few minutes or contact to our client supports for help.</string>
    <string name="error_invalid_confirm_password">Confirm Password is required</string>
    <string name="error_not_match_passwords">Password and Confirm Password must be matched</string>
    <string name="error_invalid_fullname">Full Name is required</string>
    <string name="error_invalid_country_code">Country Code is required</string>
    <string name="error_invalid_email">Email is required and must have valid format</string>
    <string name="error_invalid_mobile">Mobile number is required</string>
    <string name="error_invalid_address">Address is required</string>
    <string name="error_invalid_ic_number">IC Number is required</string>
    <string name="error_invalid_driving_license">Driving License is required</string>
    <string name="error_invalid_vehicle_number">Vehicle Number is required</string>
    <string name="error_not_accept_agreement">You must accept Terms and Conditions</string>
    <string name="error_map_service">Cannot access to Google Map service right now. Please check your network connection and try again.</string>
    <string name="error_wrong_qr_code">The QR Code does not match this current processed item.</string>
    <string name="error_missing_signature">Client\'s Signature is required</string>
    <string name="error_missing_proof_image">Proof image is required</string>
    <string name="error_missing_fullname">Client\'s Full Name is required</string>
    <string name="error_missing_consignment_numbers">You must select successful and failed orders first</string>
    <string name="error_missing_reason">Reason is required</string>
    <string name="error_missing_rating">Rating is required</string>
    <string name="error_access_memory">Cannot write to memory</string>

    <string name="navigation_drawer_open">Open menu</string>
    <string name="navigation_drawer_close">Close menu</string>

    <string name="menu_notification">Notification</string>
    <string name="menu_profile">Profile</string>
    <string name="menu_history">History</string>
    <string name="menu_news">News</string>
    <string name="menu_contact_info">Contact Info</string>
    <string name="menu_logout">Logout</string>
    <string name="menu_dashboard">Dashboard</string>
    <string name="menu_special_jobs">Special Jobs</string>
    <string name="menu_scan_qr_code">Scan QR Code</string>

    <string name="ic_number">IC Number:</string>
    <string name="home">Home:</string>
    <string name="driving_license_no">Driving license no:</string>
    <string name="vehicle_no">Vehicle no:</string>
    <string name="today_assigned">Today Assigned:</string>
    <string name="job">JOB:</string>
    <string name="delivery_to">Delivery to:</string>
    <string name="pickup_from">Pickup from:</string>
    <string name="receiver_name">Name</string>
    <string name="receiver_address">Address</string>
    <string name="receiver_contact_number">Contact Number</string>
    <string name="receiver_company">Company</string>
    <string name="message_loading">Loading...</string>
    <string name="update_info_successful">Update information successfully</string>
    <string name="today">Today:</string>
    <string name="vehicle_number">Vehicle Number:</string>
    <string name="from">From</string>
    <string name="to">To</string>
    <string name="service">Service:</string>
    <string name="consignment_number">Consignment Number:</string>
    <string name="signature_info">Please sign here</string>
    <string name="submit_arrive_successful">Submit information successfully</string>
    <string name="submit_pickup_successful">Successful Pickup is submitted</string>
    <string name="submit_pickup_failed">Failed Pickup is submitted</string>
    <string name="submit_delivery_successful">Successful Delivery is submitted</string>
    <string name="submit_delivery_failed">Failed Delivery is submitted</string>
    <string name="submit_return_successful">Successful Return to sender is submitted</string>
    <string name="submit_return_failed">Failed Return to sender is submitted</string>
    <string name="capture_info">Touch to capture image</string>
    <string name="from_name">From Name:</string>
    <string name="from_address">From Address:</string>
    <string name="to_name">To Name:</string>
    <string name="to_address">To Address:</string>
    <string name="product_type">Product Type:</string>
    <string name="size">Size:</string>
    <string name="completed_on">Completed On:</string>
    <string name="current_location">Current Location</string>
    <string name="pickups_deliveries">Pickups / Deliveries:</string>
    <string name="distances_workTimes">Distances / Work Times:</string>
    <string name="consignment_number_hint">(Touch on Consignment Number to select other order to process)</string>
    <string name="title_pickup">Pickup</string>
    <string name="title_delivery">Delivery</string>
    <string name="successful_pickup">Successful Pickup</string>
    <string name="successful_delivery">Successful Delivery</string>
    <string name="ops_remark">Ops Remark:</string>
    <string name="request">Request:</string>
    <string name="cash_on_delivery">Cash on Delivery:</string>
    <string name="exchange">Exchange:</string>
    <string name="action_option">Option</string>
    <string name="rate_my_service">RATE MY SERVICE!</string>
    <string name="you_rated_me">YOU\'VE RATED ME</string>
    <string name="date_range">DATE RANGE</string>
    <string name="return_to">Return to:</string>
    <string name="title_return">Return</string>
    <string name="successful_return">Successful Return</string>
    <string name="action_failed_return">Failed return</string>

    <string name="message_no_job">There is no job for you at the moment</string>
    <string name="message_location_explanation">Application needs to access your GPS to update your location with central system. Please contact to administrator for more information.</string>

    <string name="message_number_of_orders">%d items (touch for detail)</string>
    <string name="message_not_scan_qr">Don\'t need to scan QR for multiple orders</string>

    <!--Duy: New feature - multiple Job -->
    <string name="remaining_job">Remaining job:</string>
    <string name="menu_jobs">Jobs</string>
    <string name="error_field_required">Username could not be empty!</string>
    <string name="title_activity_main">MainActivity</string>

    <string name="action_settings">Settings</string>
    <string name="job_id">Job Id:</string>
    <string name="create_on">Create On:</string>
    <string name="searchTxt">Search</string>
    <string name="view_pin">View Pins</string>
    <string name="consignment_number_no">Search Consignment No.</string>

</resources>
