<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android">

    <group android:checkableBehavior="single">

        <!--<item
            android:id="@+id/nav_dashboard"
            android:icon="@drawable/ic_tasks"
            android:title="@string/menu_dashboard" />-->
        <item
            android:id="@+id/nav_jobs"
            android:icon="@drawable/ic_tasks"
            android:title="@string/menu_jobs" />

        <item
            android:id="@+id/nav_special_jobs"
            android:icon="@drawable/ic_tasks"
            android:title="@string/menu_special_jobs" />

        <item
            android:id="@+id/nav_notifications"
            android:icon="@drawable/ic_notification"
            android:title="@string/menu_notification" />

        <item
            android:id="@+id/nav_scan_qr"
            android:icon="@drawable/ic_qrscan"
            android:title="@string/menu_scan_qr_code" />

        <item
            android:id="@+id/nav_profile"
            android:icon="@drawable/ic_person"
            android:title="@string/menu_profile" />
        <item
            android:id="@+id/nav_history"
            android:icon="@drawable/ic_clock"
            android:title="@string/menu_history" />
        <item
            android:id="@+id/nav_news"
            android:icon="@drawable/ic_news"
            android:title="@string/menu_news" />
        <item
            android:id="@+id/nav_contact_info"
            android:icon="@drawable/ic_phone"
            android:title="@string/menu_contact_info" />
        <item
            android:id="@+id/nav_logout"
            android:icon="@drawable/ic_logout"
            android:title="@string/menu_logout" />

    </group>
</menu>