<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/background_material_light"
    android:orientation="vertical"
    android:focusable="true"
    android:focusableInTouchMode="true"
    tools:context=".LoginActivity"
    android:id="@+id/loginLayout">

    <!-- Login progress -->
    <ProgressBar
        android:id="@+id/login_progress"
        style="?android:attr/progressBarStyleLarge"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:layout_marginBottom="8dp"
        android:visibility="gone" />

    <ScrollView
        android:id="@+id/login_form"
        android:layout_width="match_parent"
        android:layout_height="fill_parent"
        android:layout_margin="@dimen/activity_vertical_margin"
        android:layout_weight="2">

        <LinearLayout
            android:id="@+id/email_login_form"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center_vertical"
            android:nestedScrollingEnabled="false"
            android:orientation="vertical">

            <ImageView
                android:id="@+id/imageLogo"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center_horizontal"
                android:contentDescription="@string/app_name"
                android:src="@drawable/ic_logo" />

            <android.support.design.widget.TextInputLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:textColorHint="@color/foregroundLoginTextColor">

                <EditText
                    android:id="@+id/username"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:hint="@string/prompt_username"
                    android:imeActionId="@+id/next"
                    android:imeOptions="actionNext"
                    android:inputType="text"
                    android:maxLines="1"
                    android:singleLine="true"
                    android:drawableLeft="@drawable/ic_person"
                    android:drawablePadding="@dimen/edit_text_padding_left"
                    android:theme="@style/EditTextTheme" />

            </android.support.design.widget.TextInputLayout>

            <android.support.design.widget.TextInputLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:textColorHint="@color/foregroundLoginTextColor">

                <EditText
                    android:id="@+id/password"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:hint="@string/prompt_password"
                    android:imeActionId="@+id/login"
                    android:imeOptions="actionUnspecified"
                    android:inputType="textPassword"
                    android:maxLines="1"
                    android:singleLine="true"
                    android:drawableLeft="@drawable/ic_key"
                    android:drawablePadding="@dimen/edit_text_padding_left"
                    android:theme="@style/EditTextTheme" />

            </android.support.design.widget.TextInputLayout>

            <CheckBox
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textColor="@color/foregroundLoginTextColor"
                android:buttonTint="@color/foregroundLoginTextColor"
                android:text="@string/prompt_remember_credential"
                android:id="@+id/rememberMe" />

            <Button
                android:id="@+id/staff_sign_in_button"
                style="?android:textAppearanceSmall"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="16dp"
                android:background="@color/backgroundStaffLogin"
                android:text="@string/action_staff_sign_in"
                android:textColor="@color/foregroundButton"
                android:textSize="@dimen/button_text_size" />

        </LinearLayout>
    </ScrollView>

    <Button
        android:id="@+id/forgot_password_button"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:layout_gravity="bottom|center_horizontal"
        android:background="#00000000"
        android:text="@string/action_forgot_password"
        android:textColor="@color/foregroundButton" />

    <Button
        android:id="@+id/register_button"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_gravity="bottom|center_horizontal"
        android:background="#1c1c1c"
        android:text="@string/action_register_driver"
        android:textColor="@color/foregroundButton" />

</LinearLayout>
